# yam

./: .gitignore  Cargo.toml  EBNF.xbnf  README.md  demo.yam  hello.yam
src/: ast.rs  lib.rs  main.rs  parser.rs  yam.lalrpop
src/ast/: block.rs  btype.rs  comp_unit.rs  expr.rs  func.rs  measure.rs  mod.rs  note.rs  phrase.rs  score.rs  stmt.rs  track.rs  val.rs
src/error/: mod.rs
src/interpret/: asgn_rval.rs  calc.rs  ctr.rs  mod.rs  score.rs
src/parse/: mod.rs
src/parser/: parser.rs  yam.lalrpop
src/semantic/: block.rs  block_scope.rs  block_table.rs  blocks.rs  expr_check.rs  mod.rs  scope.rs  scope_table.rs  symbol.rs
src/semantic/check/: asgn_check.rs  asgn_rval_check.rs  block_check.rs  decl_check.rs  expr_check.rs  func_check.rs  ifelse_check.rs  lval_check.rs  mod.rs  stmt_check.rs  while_check.rs
src/syntactic/: mod.rs
