[package]
name = "yam"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
midi_file = "0.0.6"
